First version of a lighting simulation. Fixed the readable text on the "listen to midi" button which was not formatted. Added utilities for clamp number / interpolate number / rgb interpolation. updated profiles json to match the new setting.

--- a/app.css
+++ b/app.css
@@ -9,7 +9,7 @@ body {
 }
 
 .page {
-	background-color: #0000005c;
+	background-color: #00000080;
 	height: calc(100vh - 120px);
 	overflow: auto;
 	border-radius: 10px;
